algumas mudanças foram feitas no index

--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,12 @@
     <section class="container">
 
         <h1>Lorem ipsum dolor sit amet.</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem qui recusandae eligendi dolorum accusantium, illo facere impedit iste perspiciatis deserunt temporibus eos, accusamus saepe quo quasi mollitia in cum. Quisquam assumenda excepturi
-            illum. Magnam ipsum qui totam placeat! Delectus soluta magni numquam nobis obcaecati magnam dolore, nesciunt iure rem quo.</p>
+        <div class="paragrafos">
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>Repudiandae expedita architecto, ea accusantium accusamu</p>
+            <p>s ab delectus. Sit laudantium saepe pariatur perspiciatis.</p>
+            <p>Magni et repudiandae dolor, adipisci deserunt reiciendis eos saepe!</p>
+        </div>
     </section>
     <script src="../js/index.js"></script>
 </body>
